--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <h1> All About Me</h1>
-<img src="photo.jpg"/>
+<img src="https://dhis.dhs.sg/data/photos/B27CC17F-7D10-4E8F-9384-D81387FC8678.jpg" width:"500px" height:"600px"/>
 <p>
-My name is Mark Leonard. I am a student of Dunman High School. Currently in 1st year high school. </p>
+My name is Zheng Tong Ling. I am a student of Dunman High School. Currently in 1st year high school. </p>
 <p>
 Here’s our school website link <a href ="www.dhs.sg"> Dunman High School  </a>. </p>
 <br>
 <p>Here are the things I love to do the most : </p> 
 <ul>
-<li>Climbing Mountains</li>
-<a href="http://www.trailadventours.com/philippine-mountains/mt-pulag"> Climbed Mt. Pulag </a>
-<li>Travelling and Exploring Places</li>
-<li>Reading Adventure Books</li>
+<li>Reading</li>
+<li>Playing games</li>
+<li>Sleeping</li>
 </ul>
 </body>
 </html>
